--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-native-screens": "~4.16.0",
     "react-native-web": "^0.21.0",
     "react-navigation": "^5.0.0",
-    "zustand": "^5.0.8"
+    "zustand": "^5.0.8",
+    "@react-native-picker/picker": "2.11.1"
   },
   "private": true
 }
